# MyKernels

./: .gitigonre  CMakeLists.txt  README.md
include/: Elementwise.cuh  Elementwise.h  Softmax.h  common.h
src/: Add.cu  Elementwise.cu  Softmax.cu  common.cu
